-- Startup Investment Analysis & Decision System
-- Oracle / PL/SQL viva script
-- Tested syntax target: Oracle 19c or later.

-- =========================================================
-- 1. CORE TABLES
-- =========================================================

CREATE TABLE sectors (
    sector_id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    sector_name VARCHAR2(60) NOT NULL UNIQUE,
    sector_description VARCHAR2(255) NOT NULL,
    base_risk_score NUMBER(3) NOT NULL,
    CONSTRAINT chk_sectors_risk CHECK (base_risk_score BETWEEN 0 AND 100)
);

CREATE TABLE investors (
    investor_id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    investor_name VARCHAR2(120) NOT NULL UNIQUE,
    investor_type VARCHAR2(30) NOT NULL,
    email VARCHAR2(120) NOT NULL UNIQUE,
    hq_city VARCHAR2(80) NOT NULL,
    dry_powder_inr NUMBER(15,2) NOT NULL,
    risk_preference VARCHAR2(20) NOT NULL,
    created_at DATE DEFAULT SYSDATE NOT NULL,
    CONSTRAINT chk_investor_type CHECK (investor_type IN ('Angel', 'VC', 'Corporate VC', 'Family Office')),
    CONSTRAINT chk_investor_risk_pref CHECK (risk_preference IN ('Low', 'Medium', 'High')),
    CONSTRAINT chk_investor_dry_powder CHECK (dry_powder_inr >= 0)
);

CREATE TABLE startups (
    startup_id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    sector_id NUMBER NOT NULL,
    startup_name VARCHAR2(120) NOT NULL UNIQUE,
    city VARCHAR2(80) NOT NULL,
    state VARCHAR2(80) NOT NULL,
    founding_year NUMBER(4) NOT NULL,
    funding_stage VARCHAR2(20) NOT NULL,
    annual_revenue_inr NUMBER(15,2) DEFAULT 0 NOT NULL,
    current_valuation_inr NUMBER(15,2) DEFAULT 0 NOT NULL,
    employee_count NUMBER DEFAULT 0 NOT NULL,
    equity_committed_pct NUMBER(5,2) DEFAULT 0 NOT NULL,
    website VARCHAR2(160) NOT NULL,
    CONSTRAINT fk_startups_sector FOREIGN KEY (sector_id) REFERENCES sectors (sector_id),
    CONSTRAINT chk_startup_stage CHECK (funding_stage IN ('Pre-Seed', 'Seed', 'Series A', 'Series B', 'Series C')),
    CONSTRAINT chk_startup_year CHECK (founding_year BETWEEN 2005 AND 2035),
    CONSTRAINT chk_startup_amounts CHECK (annual_revenue_inr >= 0 AND current_valuation_inr >= 0),
    CONSTRAINT chk_startup_equity CHECK (equity_committed_pct BETWEEN 0 AND 100)
);

CREATE TABLE investments (
    investment_id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    investor_id NUMBER NOT NULL,
    startup_id NUMBER NOT NULL,
    funding_round VARCHAR2(20) NOT NULL,
    security_type VARCHAR2(30) NOT NULL,
    investment_date DATE NOT NULL,
    invested_amount_inr NUMBER(15,2) NOT NULL,
    equity_percentage NUMBER(5,2) NOT NULL,
    post_money_valuation_inr NUMBER(15,2) NOT NULL,
    status VARCHAR2(20) DEFAULT 'Active' NOT NULL,
    CONSTRAINT fk_investments_investor FOREIGN KEY (investor_id) REFERENCES investors (investor_id),
    CONSTRAINT fk_investments_startup FOREIGN KEY (startup_id) REFERENCES startups (startup_id),
    CONSTRAINT chk_investment_round CHECK (funding_round IN ('Pre-Seed', 'Seed', 'Series A', 'Series B', 'Series C', 'Bridge')),
    CONSTRAINT chk_investment_security CHECK (security_type IN ('Equity', 'SAFE', 'Convertible Note')),
    CONSTRAINT chk_investment_status CHECK (status IN ('Active', 'Exited', 'Written Off')),
    CONSTRAINT chk_investment_amount CHECK (invested_amount_inr > 0),
    CONSTRAINT chk_investment_equity CHECK (equity_percentage > 0 AND equity_percentage <= 100)
);

CREATE TABLE financial_metrics (
    metric_id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    startup_id NUMBER NOT NULL,
    metric_month DATE NOT NULL,
    revenue_inr NUMBER(15,2) DEFAULT 0 NOT NULL,
    net_profit_inr NUMBER(15,2) DEFAULT 0 NOT NULL,
    cash_reserve_inr NUMBER(15,2) DEFAULT 0 NOT NULL,
    customer_count NUMBER DEFAULT 0 NOT NULL,
    mrr_inr NUMBER(15,2) DEFAULT 0 NOT NULL,
    arr_inr NUMBER(15,2) DEFAULT 0 NOT NULL,
    cac_inr NUMBER(12,2) DEFAULT 0 NOT NULL,
    ltv_inr NUMBER(12,2) DEFAULT 0 NOT NULL,
    burn_rate_inr NUMBER(15,2) DEFAULT 0 NOT NULL,
    runway_months NUMBER(5,2) DEFAULT 0 NOT NULL,
    churn_rate NUMBER(5,2) DEFAULT 0 NOT NULL,
    CONSTRAINT fk_financial_metrics_startup FOREIGN KEY (startup_id) REFERENCES startups (startup_id),
    CONSTRAINT uq_financial_period UNIQUE (startup_id, metric_month),
    CONSTRAINT chk_financial_nonnegative CHECK (
        revenue_inr >= 0
        AND cash_reserve_inr >= 0
        AND customer_count >= 0
        AND mrr_inr >= 0
        AND arr_inr >= 0
        AND cac_inr >= 0
        AND ltv_inr >= 0
        AND burn_rate_inr >= 0
        AND runway_months >= 0
        AND churn_rate BETWEEN 0 AND 100
    )
);

CREATE TABLE market_data (
    market_id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    startup_id NUMBER NOT NULL,
    simulated_trend_value NUMBER(5,2) NOT NULL,
    competitor_score NUMBER(5,2) NOT NULL,
    market_date DATE NOT NULL,
    CONSTRAINT fk_market_data_startup FOREIGN KEY (startup_id) REFERENCES startups (startup_id),
    CONSTRAINT uq_market_period UNIQUE (startup_id, market_date),
    CONSTRAINT chk_market_scores CHECK (simulated_trend_value BETWEEN 0 AND 100 AND competitor_score BETWEEN 0 AND 100)
);

CREATE TABLE partnerships (
    partner_id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    startup_id NUMBER NOT NULL,
    partner_name VARCHAR2(140) NOT NULL,
    deal_type VARCHAR2(10) NOT NULL,
    impact_score NUMBER(5,2) NOT NULL,
    announced_date DATE DEFAULT SYSDATE NOT NULL,
    CONSTRAINT fk_partnerships_startup FOREIGN KEY (startup_id) REFERENCES startups (startup_id),
    CONSTRAINT chk_partnership_type CHECK (deal_type IN ('LOI', 'Pilot')),
    CONSTRAINT chk_partnership_impact CHECK (impact_score BETWEEN 0 AND 10)
);

CREATE TABLE risk_analysis (
    risk_id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    investment_id NUMBER NOT NULL,
    risk_score NUMBER(5,2) NOT NULL,
    factors VARCHAR2(500) NOT NULL,
    assessment_date DATE DEFAULT SYSDATE NOT NULL,
    CONSTRAINT fk_risk_investment FOREIGN KEY (investment_id) REFERENCES investments (investment_id),
    CONSTRAINT uq_risk_snapshot UNIQUE (investment_id, assessment_date),
    CONSTRAINT chk_risk_score CHECK (risk_score BETWEEN 0 AND 100)
);

-- =========================================================
-- 2. INDEXES
-- =========================================================

CREATE INDEX idx_startups_sector ON startups (sector_id);
CREATE INDEX idx_investments_startup ON investments (startup_id, status);
CREATE INDEX idx_investments_investor ON investments (investor_id);
CREATE INDEX idx_metrics_startup_month ON financial_metrics (startup_id, metric_month);
CREATE INDEX idx_market_startup_date ON market_data (startup_id, market_date);
CREATE INDEX idx_risk_investment_date ON risk_analysis (investment_id, assessment_date);

-- =========================================================
-- 3. SEED DATA FOR DEMO
-- =========================================================

INSERT INTO sectors (sector_name, sector_description, base_risk_score) VALUES ('Fintech', 'Payments, lending, and embedded finance.', 42);
INSERT INTO sectors (sector_name, sector_description, base_risk_score) VALUES ('Edtech', 'Learning, upskilling, and education platforms.', 48);
INSERT INTO sectors (sector_name, sector_description, base_risk_score) VALUES ('Healthtech', 'Clinical workflow, telehealth, and diagnostics.', 45);
INSERT INTO sectors (sector_name, sector_description, base_risk_score) VALUES ('SaaS', 'Subscription software for businesses.', 35);
INSERT INTO sectors (sector_name, sector_description, base_risk_score) VALUES ('ClimateTech', 'Carbon, energy, and sustainability products.', 46);
INSERT INTO sectors (sector_name, sector_description, base_risk_score) VALUES ('Logistics', 'Fulfillment, route planning, and supply chain.', 57);

INSERT INTO investors (investor_name, investor_type, email, hq_city, dry_powder_inr, risk_preference) VALUES ('Deccan Spark Ventures', 'VC', 'invest@deccanspark.vc', 'Bengaluru', 6000000000, 'High');
INSERT INTO investors (investor_name, investor_type, email, hq_city, dry_powder_inr, risk_preference) VALUES ('ArthaLeap Capital', 'VC', 'team@arthaleap.com', 'Mumbai', 4500000000, 'Medium');
INSERT INTO investors (investor_name, investor_type, email, hq_city, dry_powder_inr, risk_preference) VALUES ('Monsoon Peak Ventures', 'Angel', 'partners@monsoonpeak.in', 'Gurugram', 1200000000, 'Medium');
INSERT INTO investors (investor_name, investor_type, email, hq_city, dry_powder_inr, risk_preference) VALUES ('Trident Horizon Fund', 'Corporate VC', 'office@tridenthorizon.com', 'Hyderabad', 3000000000, 'Low');

INSERT INTO startups (sector_id, startup_name, city, state, founding_year, funding_stage, annual_revenue_inr, current_valuation_inr, employee_count, website)
SELECT sector_id, 'RupeeRoute', 'Bengaluru', 'Karnataka', 2020, 'Series B', 89000000, 3200000000, 180, 'https://rupeeroute.example' FROM sectors WHERE sector_name = 'Fintech';
INSERT INTO startups (sector_id, startup_name, city, state, founding_year, funding_stage, annual_revenue_inr, current_valuation_inr, employee_count, website)
SELECT sector_id, 'LearnNest', 'Gurugram', 'Haryana', 2019, 'Series A', 35500000, 1450000000, 140, 'https://learnnest.example' FROM sectors WHERE sector_name = 'Edtech';
INSERT INTO startups (sector_id, startup_name, city, state, founding_year, funding_stage, annual_revenue_inr, current_valuation_inr, employee_count, website)
SELECT sector_id, 'MediMitra', 'Bengaluru', 'Karnataka', 2018, 'Series B', 56000000, 2400000000, 210, 'https://medimitra.example' FROM sectors WHERE sector_name = 'Healthtech';
INSERT INTO startups (sector_id, startup_name, city, state, founding_year, funding_stage, annual_revenue_inr, current_valuation_inr, employee_count, website)
SELECT sector_id, 'StackPilot', 'Bengaluru', 'Karnataka', 2020, 'Series A', 45000000, 1700000000, 125, 'https://stackpilot.example' FROM sectors WHERE sector_name = 'SaaS';
INSERT INTO startups (sector_id, startup_name, city, state, founding_year, funding_stage, annual_revenue_inr, current_valuation_inr, employee_count, website)
SELECT sector_id, 'CarbonLoop', 'Pune', 'Maharashtra', 2022, 'Seed', 12200000, 480000000, 55, 'https://carbonloop.example' FROM sectors WHERE sector_name = 'ClimateTech';
INSERT INTO startups (sector_id, startup_name, city, state, founding_year, funding_stage, annual_revenue_inr, current_valuation_inr, employee_count, website)
SELECT sector_id, 'FleetMesh', 'Mumbai', 'Maharashtra', 2022, 'Seed', 13500000, 520000000, 70, 'https://fleetmesh.example' FROM sectors WHERE sector_name = 'Logistics';

INSERT INTO investments (investor_id, startup_id, funding_round, security_type, investment_date, invested_amount_inr, equity_percentage, post_money_valuation_inr)
SELECT i.investor_id, s.startup_id, 'Series B', 'Equity', DATE '2026-01-20', 120000000, 4.5, 3200000000 FROM investors i CROSS JOIN startups s WHERE i.investor_name = 'Deccan Spark Ventures' AND s.startup_name = 'RupeeRoute';
INSERT INTO investments (investor_id, startup_id, funding_round, security_type, investment_date, invested_amount_inr, equity_percentage, post_money_valuation_inr)
SELECT i.investor_id, s.startup_id, 'Series A', 'Equity', DATE '2025-10-05', 75000000, 6.2, 1450000000 FROM investors i CROSS JOIN startups s WHERE i.investor_name = 'ArthaLeap Capital' AND s.startup_name = 'LearnNest';
INSERT INTO investments (investor_id, startup_id, funding_round, security_type, investment_date, invested_amount_inr, equity_percentage, post_money_valuation_inr)
SELECT i.investor_id, s.startup_id, 'Series B', 'Equity', DATE '2025-11-14', 150000000, 5.8, 2400000000 FROM investors i CROSS JOIN startups s WHERE i.investor_name = 'Trident Horizon Fund' AND s.startup_name = 'MediMitra';
INSERT INTO investments (investor_id, startup_id, funding_round, security_type, investment_date, invested_amount_inr, equity_percentage, post_money_valuation_inr)
SELECT i.investor_id, s.startup_id, 'Series A', 'SAFE', DATE '2026-03-18', 90000000, 5.1, 1700000000 FROM investors i CROSS JOIN startups s WHERE i.investor_name = 'Deccan Spark Ventures' AND s.startup_name = 'StackPilot';
INSERT INTO investments (investor_id, startup_id, funding_round, security_type, investment_date, invested_amount_inr, equity_percentage, post_money_valuation_inr)
SELECT i.investor_id, s.startup_id, 'Seed', 'Convertible Note', DATE '2026-02-10', 52000000, 9.5, 480000000 FROM investors i CROSS JOIN startups s WHERE i.investor_name = 'Monsoon Peak Ventures' AND s.startup_name = 'CarbonLoop';
INSERT INTO investments (investor_id, startup_id, funding_round, security_type, investment_date, invested_amount_inr, equity_percentage, post_money_valuation_inr)
SELECT i.investor_id, s.startup_id, 'Seed', 'Convertible Note', DATE '2026-04-08', 43000000, 10.2, 520000000 FROM investors i CROSS JOIN startups s WHERE i.investor_name = 'Monsoon Peak Ventures' AND s.startup_name = 'FleetMesh';

INSERT INTO financial_metrics (startup_id, metric_month, revenue_inr, net_profit_inr, cash_reserve_inr, customer_count, mrr_inr, arr_inr, cac_inr, ltv_inr, burn_rate_inr, runway_months, churn_rate)
SELECT startup_id, DATE '2026-04-01', 89000000, 12500000, 126000000, 114000, 82000000, 984000000, 3200, 23600, 7000000, 18.2, 1.9 FROM startups WHERE startup_name = 'RupeeRoute';
INSERT INTO financial_metrics (startup_id, metric_month, revenue_inr, net_profit_inr, cash_reserve_inr, customer_count, mrr_inr, arr_inr, cac_inr, ltv_inr, burn_rate_inr, runway_months, churn_rate)
SELECT startup_id, DATE '2026-04-01', 35500000, 3500000, 184000000, 51000, 33000000, 396000000, 5400, 16200, 11000000, 11.5, 4.1 FROM startups WHERE startup_name = 'LearnNest';
INSERT INTO financial_metrics (startup_id, metric_month, revenue_inr, net_profit_inr, cash_reserve_inr, customer_count, mrr_inr, arr_inr, cac_inr, ltv_inr, burn_rate_inr, runway_months, churn_rate)
SELECT startup_id, DATE '2026-04-01', 56000000, 500000, 242000000, 16400, 53000000, 636000000, 7800, 24800, 17000000, 7.8, 2.3 FROM startups WHERE startup_name = 'MediMitra';
INSERT INTO financial_metrics (startup_id, metric_month, revenue_inr, net_profit_inr, cash_reserve_inr, customer_count, mrr_inr, arr_inr, cac_inr, ltv_inr, burn_rate_inr, runway_months, churn_rate)
SELECT startup_id, DATE '2026-04-01', 45000000, 6500000, 205000000, 22100, 43000000, 516000000, 2800, 18200, 7500000, 16.7, 2.1 FROM startups WHERE startup_name = 'StackPilot';
INSERT INTO financial_metrics (startup_id, metric_month, revenue_inr, net_profit_inr, cash_reserve_inr, customer_count, mrr_inr, arr_inr, cac_inr, ltv_inr, burn_rate_inr, runway_months, churn_rate)
SELECT startup_id, DATE '2026-04-01', 12200000, -2000000, 82000000, 3900, 11200000, 134400000, 3200, 14400, 9000000, 6.1, 4.8 FROM startups WHERE startup_name = 'CarbonLoop';
INSERT INTO financial_metrics (startup_id, metric_month, revenue_inr, net_profit_inr, cash_reserve_inr, customer_count, mrr_inr, arr_inr, cac_inr, ltv_inr, burn_rate_inr, runway_months, churn_rate)
SELECT startup_id, DATE '2026-04-01', 13500000, -4200000, 64000000, 7200, 12500000, 150000000, 6100, 12800, 13000000, 4.9, 6.8 FROM startups WHERE startup_name = 'FleetMesh';

INSERT INTO market_data (startup_id, simulated_trend_value, competitor_score, market_date)
SELECT startup_id, 84, 62, DATE '2026-04-01' FROM startups WHERE startup_name = 'RupeeRoute';
INSERT INTO market_data (startup_id, simulated_trend_value, competitor_score, market_date)
SELECT startup_id, 68, 60, DATE '2026-04-01' FROM startups WHERE startup_name = 'LearnNest';
INSERT INTO market_data (startup_id, simulated_trend_value, competitor_score, market_date)
SELECT startup_id, 71, 55, DATE '2026-04-01' FROM startups WHERE startup_name = 'MediMitra';
INSERT INTO market_data (startup_id, simulated_trend_value, competitor_score, market_date)
SELECT startup_id, 81, 57, DATE '2026-04-01' FROM startups WHERE startup_name = 'StackPilot';
INSERT INTO market_data (startup_id, simulated_trend_value, competitor_score, market_date)
SELECT startup_id, 74, 49, DATE '2026-04-01' FROM startups WHERE startup_name = 'CarbonLoop';
INSERT INTO market_data (startup_id, simulated_trend_value, competitor_score, market_date)
SELECT startup_id, 59, 72, DATE '2026-04-01' FROM startups WHERE startup_name = 'FleetMesh';

INSERT INTO partnerships (startup_id, partner_name, deal_type, impact_score, announced_date)
SELECT startup_id, 'HDFC Bank', 'Pilot', 9.1, DATE '2026-04-05' FROM startups WHERE startup_name = 'RupeeRoute';
INSERT INTO partnerships (startup_id, partner_name, deal_type, impact_score, announced_date)
SELECT startup_id, 'Delhi Public School Network', 'LOI', 8.0, DATE '2026-01-22' FROM startups WHERE startup_name = 'LearnNest';
INSERT INTO partnerships (startup_id, partner_name, deal_type, impact_score, announced_date)
SELECT startup_id, 'Apollo Clinics', 'Pilot', 8.7, DATE '2026-02-26' FROM startups WHERE startup_name = 'MediMitra';
INSERT INTO partnerships (startup_id, partner_name, deal_type, impact_score, announced_date)
SELECT startup_id, 'Zoho Marketplace', 'Pilot', 7.6, DATE '2026-04-03' FROM startups WHERE startup_name = 'StackPilot';
INSERT INTO partnerships (startup_id, partner_name, deal_type, impact_score, announced_date)
SELECT startup_id, 'Tata Power Distribution', 'LOI', 8.4, DATE '2026-03-28' FROM startups WHERE startup_name = 'CarbonLoop';
INSERT INTO partnerships (startup_id, partner_name, deal_type, impact_score, announced_date)
SELECT startup_id, 'Blue Dart', 'Pilot', 6.8, DATE '2026-04-08' FROM startups WHERE startup_name = 'FleetMesh';

INSERT INTO risk_analysis (investment_id, risk_score, factors, assessment_date)
SELECT investment_id, 28, 'Strong payback profile, healthy runway, low churn.', DATE '2026-04-15' FROM investments WHERE startup_id = (SELECT startup_id FROM startups WHERE startup_name = 'RupeeRoute');
INSERT INTO risk_analysis (investment_id, risk_score, factors, assessment_date)
SELECT investment_id, 39, 'Moderate churn, but monetization is improving.', DATE '2026-04-15' FROM investments WHERE startup_id = (SELECT startup_id FROM startups WHERE startup_name = 'LearnNest');
INSERT INTO risk_analysis (investment_id, risk_score, factors, assessment_date)
SELECT investment_id, 46, 'Healthcare adoption cycle creates execution risk.', DATE '2026-04-15' FROM investments WHERE startup_id = (SELECT startup_id FROM startups WHERE startup_name = 'MediMitra');
INSERT INTO risk_analysis (investment_id, risk_score, factors, assessment_date)
SELECT investment_id, 31, 'Low churn and strong product-led expansion.', DATE '2026-04-15' FROM investments WHERE startup_id = (SELECT startup_id FROM startups WHERE startup_name = 'StackPilot');
INSERT INTO risk_analysis (investment_id, risk_score, factors, assessment_date)
SELECT investment_id, 56, 'Climate tailwinds but slower deployment cycles.', DATE '2026-04-15' FROM investments WHERE startup_id = (SELECT startup_id FROM startups WHERE startup_name = 'CarbonLoop');
INSERT INTO risk_analysis (investment_id, risk_score, factors, assessment_date)
SELECT investment_id, 73, 'Short runway and high churn.', DATE '2026-04-15' FROM investments WHERE startup_id = (SELECT startup_id FROM startups WHERE startup_name = 'FleetMesh');

COMMIT;

-- =========================================================
-- 4. VIEWS
-- =========================================================

CREATE OR REPLACE VIEW vw_TopStartups AS
SELECT
    s.startup_id,
    s.startup_name,
    sec.sector_name,
    s.funding_stage,
    ROUND(fm.ltv_inr / NULLIF(fm.cac_inr, 0), 2) AS ltv_cac_ratio,
    fm.runway_months,
    fm.churn_rate
FROM startups s
JOIN sectors sec ON sec.sector_id = s.sector_id
JOIN financial_metrics fm ON fm.startup_id = s.startup_id
WHERE fm.metric_month = (
    SELECT MAX(metric_month)
    FROM financial_metrics
    WHERE startup_id = s.startup_id
)
AND fm.cac_inr > 0
AND (fm.ltv_inr / NULLIF(fm.cac_inr, 0)) >= 4
AND fm.runway_months >= 9;

CREATE OR REPLACE VIEW vw_HighRiskAlerts AS
SELECT
    s.startup_id,
    s.startup_name,
    sec.sector_name,
    fm.burn_rate_inr,
    fm.runway_months,
    fm.churn_rate,
    ROUND(AVG(ra.risk_score), 2) AS avg_risk_score
FROM startups s
JOIN sectors sec ON sec.sector_id = s.sector_id
JOIN financial_metrics fm ON fm.startup_id = s.startup_id
LEFT JOIN investments i ON i.startup_id = s.startup_id
LEFT JOIN risk_analysis ra ON ra.investment_id = i.investment_id
WHERE fm.metric_month = (
    SELECT MAX(metric_month)
    FROM financial_metrics
    WHERE startup_id = s.startup_id
)
AND fm.runway_months < 6
GROUP BY s.startup_id, s.startup_name, sec.sector_name, fm.burn_rate_inr, fm.runway_months, fm.churn_rate;

-- =========================================================
-- 5. TRIGGERS
-- =========================================================

CREATE OR REPLACE TRIGGER trig_EquityCheck
FOR INSERT OR UPDATE OF equity_percentage, startup_id, status
ON investments
COMPOUND TRIGGER
    TYPE t_startup_ids IS TABLE OF investments.startup_id%TYPE INDEX BY PLS_INTEGER;
    g_startup_ids t_startup_ids;
    g_count PLS_INTEGER := 0;

    BEFORE EACH ROW IS
    BEGIN
        g_count := g_count + 1;
        g_startup_ids(g_count) := :NEW.startup_id;
    END BEFORE EACH ROW;

    AFTER STATEMENT IS
        v_total_equity NUMBER(7,2);
    BEGIN
        FOR idx IN 1 .. g_count LOOP
            SELECT NVL(SUM(equity_percentage), 0)
            INTO v_total_equity
            FROM investments
            WHERE startup_id = g_startup_ids(idx)
              AND status = 'Active';

            IF v_total_equity > 100 THEN
                RAISE_APPLICATION_ERROR(-20001, 'Investment rejected: total startup equity cannot exceed 100 percent.');
            END IF;
        END LOOP;
    END AFTER STATEMENT;
END trig_EquityCheck;
/

CREATE OR REPLACE TRIGGER trig_RiskUpdate
AFTER UPDATE OF burn_rate_inr, churn_rate, runway_months
ON financial_metrics
FOR EACH ROW
BEGIN
    UPDATE risk_analysis ra
    SET ra.risk_score = LEAST(
        100,
        ROUND(
            CASE
                WHEN :NEW.burn_rate_inr >= 20000000 THEN 35
                WHEN :NEW.burn_rate_inr >= 12000000 THEN 25
                ELSE 15
            END
            + CASE
                WHEN :NEW.runway_months < 6 THEN 35
                WHEN :NEW.runway_months < 12 THEN 20
                ELSE 10
            END
            + LEAST(30, :NEW.churn_rate * 4),
            2
        )
    )
    WHERE ra.investment_id IN (
        SELECT investment_id
        FROM investments
        WHERE startup_id = :NEW.startup_id
          AND status = 'Active'
    )
    AND ra.assessment_date = (
        SELECT MAX(ra2.assessment_date)
        FROM risk_analysis ra2
        WHERE ra2.investment_id = ra.investment_id
    );
END;
/

-- =========================================================
-- 6. STORED PROCEDURES
-- =========================================================

CREATE OR REPLACE PROCEDURE sp_CalculateROI (
    p_investment_id IN NUMBER,
    p_roi_percentage OUT NUMBER
) AS
BEGIN
    SELECT ROUND(
        ((fm.net_profit_inr * 12 * 5 * (i.equity_percentage / 100))
        / NULLIF(i.invested_amount_inr, 0)) * 100,
        2
    )
    INTO p_roi_percentage
    FROM investments i
    JOIN financial_metrics fm ON fm.startup_id = i.startup_id
    WHERE i.investment_id = p_investment_id
      AND fm.metric_month = (
          SELECT MAX(metric_month)
          FROM financial_metrics
          WHERE startup_id = i.startup_id
      );
END;
/

CREATE OR REPLACE PROCEDURE sp_GetRecommendation (
    p_result OUT SYS_REFCURSOR
) AS
BEGIN
    OPEN p_result FOR
        SELECT
            ROW_NUMBER() OVER (ORDER BY recommendation_score DESC, startup_name) AS recommendation_rank,
            startup_id,
            startup_name,
            sector_name,
            funding_stage,
            ROUND(ltv_cac_ratio, 2) AS ltv_cac_ratio,
            ROUND(risk_score, 2) AS risk_score,
            ROUND(recommendation_score / 10, 2) AS decision_score,
            CASE
                WHEN recommendation_score >= 75 THEN 'INVEST'
                WHEN recommendation_score >= 60 THEN 'WATCH'
                ELSE 'AVOID'
            END AS signal
        FROM (
            SELECT
                s.startup_id,
                s.startup_name,
                sec.sector_name,
                s.funding_stage,
                fm.ltv_inr / NULLIF(fm.cac_inr, 0) AS ltv_cac_ratio,
                NVL(AVG(ra.risk_score), 50) AS risk_score,
                (
                    0.50 * LEAST(100, (fm.ltv_inr / NULLIF(fm.cac_inr, 0)) * 16.67)
                    + 0.20 * GREATEST(0, 100 - ((fm.cac_inr / max_cac.max_cac_inr) * 100))
                    + 0.30 * (100 - NVL(AVG(ra.risk_score), 50))
                ) AS recommendation_score
            FROM startups s
            JOIN sectors sec ON sec.sector_id = s.sector_id
            JOIN financial_metrics fm ON fm.startup_id = s.startup_id
            LEFT JOIN investments i ON i.startup_id = s.startup_id
            LEFT JOIN risk_analysis ra ON ra.investment_id = i.investment_id
            CROSS JOIN (
                SELECT MAX(cac_inr) AS max_cac_inr
                FROM financial_metrics
                WHERE metric_month = (SELECT MAX(metric_month) FROM financial_metrics)
            ) max_cac
            WHERE fm.metric_month = (
                SELECT MAX(metric_month)
                FROM financial_metrics
                WHERE startup_id = s.startup_id
            )
            AND fm.cac_inr > 0
            GROUP BY
                s.startup_id,
                s.startup_name,
                sec.sector_name,
                s.funding_stage,
                fm.ltv_inr,
                fm.cac_inr,
                max_cac.max_cac_inr
        )
        ORDER BY recommendation_score DESC, startup_name
        FETCH FIRST 5 ROWS ONLY;
END;
/

-- =========================================================
-- 7. 5 COMPLEX JOINS
-- =========================================================

-- Join 1: highest ROI investors in Fintech.
SELECT
    inv.investor_name,
    s.startup_name,
    sec.sector_name,
    i.funding_round,
    fm.net_profit_inr,
    ra.risk_score,
    ROUND(((fm.net_profit_inr * 12 * 5 * (i.equity_percentage / 100)) / i.invested_amount_inr) * 100, 2) AS roi_proxy_pct
FROM startups s
JOIN sectors sec ON sec.sector_id = s.sector_id
JOIN investments i ON i.startup_id = s.startup_id
JOIN investors inv ON inv.investor_id = i.investor_id
JOIN financial_metrics fm ON fm.startup_id = s.startup_id
LEFT JOIN risk_analysis ra ON ra.investment_id = i.investment_id
WHERE sec.sector_name = 'Fintech'
  AND fm.metric_month = (SELECT MAX(metric_month) FROM financial_metrics WHERE startup_id = s.startup_id)
ORDER BY roi_proxy_pct DESC;

-- Join 2: partnership leverage.
SELECT s.startup_name, sec.sector_name, p.partner_name, p.deal_type, p.impact_score, md.simulated_trend_value
FROM startups s
JOIN sectors sec ON sec.sector_id = s.sector_id
JOIN partnerships p ON p.startup_id = s.startup_id
JOIN market_data md ON md.startup_id = s.startup_id
WHERE md.market_date = (SELECT MAX(market_date) FROM market_data WHERE startup_id = s.startup_id)
ORDER BY p.impact_score DESC;

-- Join 3: investor portfolio diversification.
SELECT inv.investor_name, sec.sector_name, COUNT(*) AS active_bets, SUM(i.invested_amount_inr) AS deployed_capital
FROM investors inv
JOIN investments i ON i.investor_id = inv.investor_id
JOIN startups s ON s.startup_id = i.startup_id
JOIN sectors sec ON sec.sector_id = s.sector_id
WHERE i.status = 'Active'
GROUP BY inv.investor_name, sec.sector_name
ORDER BY deployed_capital DESC;

-- Join 4: runway stress with investor exposure.
SELECT s.startup_name, inv.investor_name, fm.runway_months, fm.burn_rate_inr, fm.churn_rate, ra.risk_score
FROM startups s
JOIN investments i ON i.startup_id = s.startup_id
JOIN investors inv ON inv.investor_id = i.investor_id
JOIN financial_metrics fm ON fm.startup_id = s.startup_id
LEFT JOIN risk_analysis ra ON ra.investment_id = i.investment_id
WHERE fm.metric_month = (SELECT MAX(metric_month) FROM financial_metrics WHERE startup_id = s.startup_id)
  AND fm.runway_months < 12
ORDER BY fm.runway_months ASC, ra.risk_score DESC;

-- Join 5: funding efficiency across six entities.
SELECT
    s.startup_name,
    sec.sector_name,
    SUM(i.invested_amount_inr) AS total_funding,
    ROUND(fm.ltv_inr / NULLIF(fm.cac_inr, 0), 2) AS ltv_cac_ratio,
    AVG(p.impact_score) AS avg_partner_impact,
    md.simulated_trend_value
FROM startups s
JOIN sectors sec ON sec.sector_id = s.sector_id
JOIN investments i ON i.startup_id = s.startup_id
JOIN financial_metrics fm ON fm.startup_id = s.startup_id
LEFT JOIN partnerships p ON p.startup_id = s.startup_id
JOIN market_data md ON md.startup_id = s.startup_id
WHERE fm.metric_month = (SELECT MAX(metric_month) FROM financial_metrics WHERE startup_id = s.startup_id)
  AND md.market_date = (SELECT MAX(market_date) FROM market_data WHERE startup_id = s.startup_id)
GROUP BY s.startup_name, sec.sector_name, fm.ltv_inr, fm.cac_inr, md.simulated_trend_value
ORDER BY ltv_cac_ratio DESC;

-- =========================================================
-- 8. 5 CORRELATED SUBQUERIES
-- =========================================================

-- Subquery 1: startups whose burn rate is higher than their sector average.
SELECT s.startup_name, sec.sector_name, fm.burn_rate_inr
FROM startups s
JOIN sectors sec ON sec.sector_id = s.sector_id
JOIN financial_metrics fm ON fm.startup_id = s.startup_id
WHERE fm.metric_month = (SELECT MAX(metric_month) FROM financial_metrics WHERE startup_id = s.startup_id)
  AND fm.burn_rate_inr > (
      SELECT AVG(fm2.burn_rate_inr)
      FROM startups s2
      JOIN financial_metrics fm2 ON fm2.startup_id = s2.startup_id
      WHERE s2.sector_id = s.sector_id
        AND fm2.metric_month = (SELECT MAX(metric_month) FROM financial_metrics WHERE startup_id = s2.startup_id)
  );

-- Subquery 2: startups above sector LTV/CAC average.
SELECT s.startup_name, sec.sector_name, ROUND(fm.ltv_inr / NULLIF(fm.cac_inr, 0), 2) AS ltv_cac_ratio
FROM startups s
JOIN sectors sec ON sec.sector_id = s.sector_id
JOIN financial_metrics fm ON fm.startup_id = s.startup_id
WHERE fm.metric_month = (SELECT MAX(metric_month) FROM financial_metrics WHERE startup_id = s.startup_id)
  AND (fm.ltv_inr / NULLIF(fm.cac_inr, 0)) > (
      SELECT AVG(fm2.ltv_inr / NULLIF(fm2.cac_inr, 0))
      FROM startups s2
      JOIN financial_metrics fm2 ON fm2.startup_id = s2.startup_id
      WHERE s2.sector_id = s.sector_id
        AND fm2.metric_month = (SELECT MAX(metric_month) FROM financial_metrics WHERE startup_id = s2.startup_id)
  );

-- Subquery 3: investors deploying above their own investor-type average.
SELECT inv.investor_name, inv.investor_type
FROM investors inv
WHERE (
    SELECT NVL(SUM(i.invested_amount_inr), 0)
    FROM investments i
    WHERE i.investor_id = inv.investor_id
) > (
    SELECT AVG(type_total.total_deployed)
    FROM (
        SELECT inv2.investor_type, inv2.investor_id, NVL(SUM(i2.invested_amount_inr), 0) AS total_deployed
        FROM investors inv2
        LEFT JOIN investments i2 ON i2.investor_id = inv2.investor_id
        GROUP BY inv2.investor_type, inv2.investor_id
    ) type_total
    WHERE type_total.investor_type = inv.investor_type
);

-- Subquery 4: startups with better runway than sector average.
SELECT s.startup_name, sec.sector_name, fm.runway_months
FROM startups s
JOIN sectors sec ON sec.sector_id = s.sector_id
JOIN financial_metrics fm ON fm.startup_id = s.startup_id
WHERE fm.metric_month = (SELECT MAX(metric_month) FROM financial_metrics WHERE startup_id = s.startup_id)
  AND fm.runway_months > (
      SELECT AVG(fm2.runway_months)
      FROM startups s2
      JOIN financial_metrics fm2 ON fm2.startup_id = s2.startup_id
      WHERE s2.sector_id = s.sector_id
        AND fm2.metric_month = (SELECT MAX(metric_month) FROM financial_metrics WHERE startup_id = s2.startup_id)
  );

-- Subquery 5: startups with market trend above sector average.
SELECT s.startup_name, sec.sector_name, md.simulated_trend_value
FROM startups s
JOIN sectors sec ON sec.sector_id = s.sector_id
JOIN market_data md ON md.startup_id = s.startup_id
WHERE md.market_date = (SELECT MAX(market_date) FROM market_data WHERE startup_id = s.startup_id)
  AND md.simulated_trend_value > (
      SELECT AVG(md2.simulated_trend_value)
      FROM startups s2
      JOIN market_data md2 ON md2.startup_id = s2.startup_id
      WHERE s2.sector_id = s.sector_id
        AND md2.market_date = (SELECT MAX(market_date) FROM market_data WHERE startup_id = s2.startup_id)
  );

-- =========================================================
-- 9. PROCEDURE DEMO CALLS
-- =========================================================

DECLARE
    v_roi NUMBER;
BEGIN
    sp_CalculateROI(1, v_roi);
    DBMS_OUTPUT.PUT_LINE('ROI for investment 1 = ' || v_roi || '%');
END;
/

VAR recommendation_cursor REFCURSOR;
EXEC sp_GetRecommendation(:recommendation_cursor);
PRINT recommendation_cursor;
