erDiagram
    SECTORS ||--o{ STARTUPS : classifies
    INVESTORS ||--o{ INVESTMENTS : funds
    STARTUPS ||--o{ INVESTMENTS : receives
    STARTUPS ||--o{ FINANCIAL_METRICS : reports
    STARTUPS ||--o{ MARKET_DATA : tracks
    STARTUPS ||--o{ PARTNERSHIPS : signs
    INVESTMENTS ||--o{ RISK_ANALYSIS : assessed_by

    SECTORS {
        NUMBER sector_id PK
        VARCHAR sector_name UK
        VARCHAR sector_description
        NUMBER base_risk_score
    }

    STARTUPS {
        NUMBER startup_id PK
        NUMBER sector_id FK
        VARCHAR startup_name UK
        VARCHAR city
        VARCHAR state
        NUMBER founding_year
        VARCHAR funding_stage
        NUMBER annual_revenue_inr
        NUMBER current_valuation_inr
        NUMBER employee_count
        NUMBER equity_committed_pct
    }

    INVESTORS {
        NUMBER investor_id PK
        VARCHAR investor_name UK
        VARCHAR investor_type
        VARCHAR email UK
        VARCHAR hq_city
        NUMBER dry_powder_inr
        VARCHAR risk_preference
    }

    INVESTMENTS {
        NUMBER investment_id PK
        NUMBER investor_id FK
        NUMBER startup_id FK
        VARCHAR funding_round
        VARCHAR security_type
        DATE investment_date
        NUMBER invested_amount_inr
        NUMBER equity_percentage
        NUMBER post_money_valuation_inr
        VARCHAR status
    }

    FINANCIAL_METRICS {
        NUMBER metric_id PK
        NUMBER startup_id FK
        DATE metric_month UK
        NUMBER revenue_inr
        NUMBER net_profit_inr
        NUMBER customer_count
        NUMBER cac_inr
        NUMBER ltv_inr
        NUMBER burn_rate_inr
        NUMBER runway_months
        NUMBER churn_rate
    }

    MARKET_DATA {
        NUMBER market_id PK
        NUMBER startup_id FK
        NUMBER simulated_trend_value
        NUMBER competitor_score
        DATE market_date UK
    }

    PARTNERSHIPS {
        NUMBER partner_id PK
        NUMBER startup_id FK
        VARCHAR partner_name
        VARCHAR deal_type
        NUMBER impact_score
        DATE announced_date
    }

    RISK_ANALYSIS {
        NUMBER risk_id PK
        NUMBER investment_id FK
        NUMBER risk_score
        VARCHAR factors
        DATE assessment_date
    }
